# Database_project

./: README.md  main.py  pyproject.toml
data/: database.ini
src/: DB_class.py  config.py  func.py  get_vacancy.py  ulils.py
tests/: test_DB_class.py  test_config.py  test_get_vacancy.py
